iml-services/iml-devices/src/snapshots/get_changes_values__db_device_hosts_updated.snap
---
source: iml-services/iml-devices/src/db.rs
expression: changes
---
[
    Add(
        DeviceHost {
            device_id: DeviceId(
                "d",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/scsi/d",
                },
            ),
            mount_path: MountPath(
                Some(
                    "/fake/path/scsi/d",
                ),
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
]
