iml-services/iml-devices/src/snapshots/get_changes_values__local_device_hosts_persisted_on_clean_db.snap
---
source: iml-services/iml-devices/src/db.rs
expression: changes
---
[
    Add(
        DeviceHost {
            device_id: DeviceId(
                "a",
            ),
            fqdn: Fqdn(
                "oss1",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/scsi/a",
                },
            ),
            mount_path: MountPath(
                Some(
                    "/fake/path/scsi/a",
                ),
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
    Add(
        DeviceHost {
            device_id: DeviceId(
                "a",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/scsi/a",
                },
            ),
            mount_path: MountPath(
                Some(
                    "/fake/path/scsi/a",
                ),
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
    Add(
        DeviceHost {
            device_id: DeviceId(
                "b",
            ),
            fqdn: Fqdn(
                "oss1",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/mpath/a",
                },
            ),
            mount_path: MountPath(
                Some(
                    "/fake/path/mpath/a",
                ),
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
    Add(
        DeviceHost {
            device_id: DeviceId(
                "b",
            ),
            fqdn: Fqdn(
                "oss2",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/mpath/a",
                },
            ),
            mount_path: MountPath(
                Some(
                    "/fake/path/mpath/a",
                ),
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
    Add(
        DeviceHost {
            device_id: DeviceId(
                "c",
            ),
            fqdn: Fqdn(
                "oss1",
            ),
            local: true,
            paths: Paths(
                {
                    "/fake/path/zpool/a",
                },
            ),
            mount_path: MountPath(
                Some(
                    "/fake/path/zpool/a",
                ),
            ),
            fs_type: Some(
                "some_fs",
            ),
            fs_label: Some(
                "some_label",
            ),
            fs_uuid: Some(
                "some_uuid",
            ),
        },
    ),
]
